# image_restamp

./: CMakeLists.txt  package.xml
include/image_restamp/: image_restamp_node.h
src/: image_restamp_node.cpp
